--- a/templates/categories.html
+++ b/templates/categories.html
@@ -5,25 +5,19 @@
 {% block content %}
 {% set show_search = true %}
 
-<section class="categories-scroll">
+<section class="categories-page">
   <div class="container">
     <h2 class="section-heading">All Categories</h2>
-
-    {% if categories %}
-      <div class="cards-grid">
-        {% for cat in categories %}
-          <div class="card">
-            <h3>{{ cat.name }}</h3>
-            {% if cat.photo %}
-              <img src="{{ cat.photo }}" alt="{{ cat.name }}">
-            {% endif %}
-            <a href="{{ url_for('recipe_bp.cards_page', category_id=cat.id) }}" class="btn">View Recipes</a>
-          </div>
-        {% endfor %}
-      </div>
-    {% else %}
-      <p>No categories found. Check back soon!</p>
-    {% endif %}
+    <div class="categories-grid">
+      {% for category in categories %}
+        <div class="category-card">
+          <img src="{{ category.photo }}" alt="{{ category.name }}">
+          <div class="label">{{ category.name }}</div>
+          <a href="{{ url_for('recipe_bp.recipes_by_category', category_id=category.id) }}" class="btn">View Recipes</a>
+        </div>
+      {% endfor %}
+    </div>
   </div>
 </section>
+
 {% endblock %}
