--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -5,8 +5,8 @@
 {% block content %}
 {% set show_search = false %}
 
-<section class="auth-page" style="background-image: url('{{ url_for('static', filename='img/Background image_LogIn.jpg') }}');">
-  <div class="auth-container">
+<section class="auth-page" style="background-image: url('{{ url_for('static', filename='img/login_img.jpg') }}');">
+  <div class="auth-signup-container">
     <form action="{{ url_for('user_bp.register') }}" method="POST">
       <h1>Sign Up</h1>
 
@@ -25,7 +25,7 @@
         <a href="#">Forgot password?</a>
       </div>
 
-      <button type="submit" class="btn">Register</button>
+      <button type="submit" class="signup-btn">Register</button>
 
       <div class="register-link">
         <p>Already have an account? <a href="{{ url_for('user_bp.login') }}">Login</a></p>
