--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -11,6 +11,11 @@
       <h1>Sign Up</h1>
 
       <div class="input-box">
+        <input type="text" name="username" placeholder="Username" required>
+        <i class='bx bxs-user'></i>
+      </div>
+
+      <div class="input-box">
         <input type="email" name="email" placeholder="Email" required>
         <i class='bx bxs-envelope'></i>
       </div>
@@ -28,7 +33,7 @@
       <button type="submit" class="signup-btn">Register</button>
 
       <div class="register-link">
-        <p>Already have an account? <a href="{{ url_for('user_bp.login') }}">Login</a></p>
+        <p>Already have an account? <a href="{{ url_for('user_bp.login_page') }}">Login</a></p>
       </div>
     </form>
   </div>
