--- a/templates/index.html
+++ b/templates/index.html
@@ -15,15 +15,24 @@
   </div>
 </section>
 
-
-
 <!-- ▣ Find Recipes -->
 <section class="find-recipes" id="find-recipes">
   <div class="container">
     <h3>Find Your Perfect Recipe</h3>
     <form class="search-form" action="{{ url_for('recipe_bp.recommend') }}" method="POST">
-      <input type="text" name="ingredients" placeholder="What ingredients do you have?" required>
-      <input type="number" name="servings" placeholder="Servings" min="1">
+      <input 
+        type="text" 
+        name="ingredients" 
+        placeholder="What ingredients do you have?" 
+        required
+      >
+      <input 
+        type="number" 
+        name="servings" 
+        placeholder="Servings" 
+        min="1" 
+        class="servings-input"
+      >
       <button type="submit">
         Find Recipes <i class="bx bx-search"></i>
       </button>
@@ -56,7 +65,7 @@
        </a>
      </div>
    </div> 
-  
+
 </section>
 
 <!-- ▣ Features -->
